# dino-ai-auditor

./: README.md  pyproject.toml  settings.json
dinohub_ai_auditor/domain/: AIService.py  ServiceInput.py  ServiceOutput.py
